# colabora

./: .env.example  .gitignore  IDEA.md  IMPROVEMENTS.md  README.md  deploy-colabora.yml  docker-compose.yml
backend-api/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend-api/alembic/: env.py
backend-api/alembic/versions/: 0001_initial.py  0003_comments.py  d6718bf186c2_add_binary_state.py
backend-api/app/: config.py  db.py  main.py
backend-api/app/auth/: deps.py  security.py
backend-api/app/cerbos/: client.py
backend-api/app/models/: __init__.py  base.py  comment.py  document.py  permission.py  user.py
backend-api/app/rag/: embeddings.py  ingest.py  llm.py  vectorstore.py
backend-api/app/routers/: auth.py  comments.py  documents.py  imports.py  internal.py  rag.py  webhooks.py
backend-api/app/schemas/: auth.py  comment.py  document.py
backend-api/app/services/: convert.py
backend-api/tests/: test_rag.py  test_security.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  probe-ws.mjs  vite.config.ts
frontend/src/: AiSidebar.tsx  App.tsx  CommentsPanel.tsx  Editor.tsx  Login.tsx  Sidebar.tsx  SuggestionsPanel.tsx  Toolbar.tsx  api.ts  auth.ts  config.ts  (+1 more)
graphify-out/: .graphify_labels.json  .graphify_labels.json.sig  .graphify_python  .graphify_root  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
realtime-server/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
scripts/: bulk_ingest.py
(+24 files in other folders)
