[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nyx-backend-api"
version = "0.1.0"
description = "Nyx Platform — FastAPI core (Fase 2)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2.0",
    "cryptography>=42",          # necessario p/ auth caching_sha2_password do MySQL 8.4
    "alembic>=1.13",
    "pydantic-settings>=2.1",
    "pydantic[email]>=2.6",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "httpx>=0.27",
    "python-multipart>=0.0.9",   # form do OAuth2 /login + upload de PDF
    # ── RAG (Fase 4) ──
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-text-splitters>=0.2",
    "langchain-huggingface>=0.0.3",   # provider default (sentence-transformers)
    "sentence-transformers>=2.7",
    "opensearch-py>=2.4",
    "pypdf>=4.0",
    "mammoth>=1.6",              # DOCX -> HTML semantico (conversao de documentos)
    "pymupdf>=1.24",             # PDF -> HTML com heuristicas (conversao de documentos)
    # ── LLM chat (Fase 5) ── provider selecionado por env
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
    "langchain-ollama>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["app*"]
